# OnTrack

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  README.md  config.py  docker-compose.recovery.yml  docker-compose.yml  railway.toml  requirements.txt  run.py
backend/: .coverage  .dockerignore  Dockerfile  Dockerfile.railway  README.md  alembic.ini  pyproject.toml  railway.prod.toml  railway.toml  railway.worker.prod.toml  railway.worker.toml
backend/alembic/: env.py
backend/alembic/versions/: 7966d120d748_initial_ontrack_schema.py  a2b3c4d5e6f7_catalog_market_and_global_recipes.py  b1c2d3e4f5a6_locale_market_catalog_model.py  c2d3e4f5a6b7_backfill_user_product_normalized_name.py  c4e5f6a7b8c9d1_global_product_catalog_columns.py  d3e4f5a6b7c8_drop_recipe_parse_logs.py  e7f8a9b0c1d2_ui_locale_and_market_code.py  f1a2b3c4d5e6_drop_users_lang_column.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/core/: catalog_data.py  config.py  cors.py  passwords.py  rate_limit.py  runtime_data.py  security.py  sentry.py
backend/app/db/: __init__.py  schema_validate.py  session.py
backend/app/domain/: catalog_seed.py  ingredient_units.py  market.py  package_math.py  product_filters.py  product_normalize.py
backend/app/models/: __init__.py  auth_code.py  day_schedule.py  household_member.py  import_log.py  market.py  meal_plan.py  product.py  product_market_price.py  product_translation.py  recipe.py  recipe_parse_log.py  recipe_translation.py  tables.py  user.py  user_recipe_favorite.py
backend/app/schemas/: auth.py  day_schedule.py  import_prices.py  meal_plan.py  members.py  products.py  recipes.py
backend/app/scripts/: build_catalog.py  build_catalog_seeds.py  export_user_catalog_to_seeds.py  import_catalog.py  report_catalog_migration.py  restore_post_catalog_migration.py  seed_global_catalog.py
backend/app/services/: auth_service.py  catalog_resolver.py  catalog_seed_service.py  day_schedule_presenter.py  day_schedule_service.py  dish_compare_loader.py  email_service.py  fuel_service.py  gemini_client.py  import_names.py  import_service.py  macro_lookup.py  meal_plan_presenter.py  meal_plan_service.py  member_presenter.py  member_service.py  product_presenter.py  product_service.py  recipe_image_service.py  recipe_presenter.py  recipe_service.py  user_preferences.py  user_presenter.py
backend/data/: README.md  manifest.json
backend/scripts/: cutover_smoke.sh  db_rehearsal_stamp.sh  ensure_alembic_head.py  railway-up-retry.sh  reset_local_catalog_db.sh  run-migrations.sh  start-production.sh  start-worker.sh  validate_runtime_data.py  validate_schema.py  verify-production-auth.sh  verify-production-env.sh  wait-for-url.sh
backend/tests/: conftest.py  test_architecture_policy.py  test_auth_email.py  test_auth_redirects.py  test_backend_data.py  test_catalog_pipeline.py  test_catalog_seed.py  test_cors.py  test_deploy_policy.py  test_dish_compare_data.py  test_docker_policy.py  test_email_service.py  test_ensure_alembic_head.py  test_global_catalog_import.py  test_health.py  test_ingredient_units.py  test_locale_market_matrix.py  test_meal_plan_summary.py  test_package_math.py  test_product_catalog_mutation_policy.py  test_product_catalog_query_layer.py  test_product_normalize.py  test_recipe_presenter.py  test_runtime_data.py  test_sentry.py
(+739 files in other folders)
