[project]
name = "ontrack-backend"
version = "0.1.0"
description = "OnTrack FastAPI backend (Flask migration target)"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115.0,<0.116",
    "pydantic-settings>=2.6.0,<3",
    "uvicorn[standard]>=0.32.0,<0.33",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0,<0.29",
    "pytest>=8.3.0,<9",
    "ruff>=0.8.0,<0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
