[project]
name = "ontrack-backend"
version = "0.1.0"
description = "OnTrack FastAPI backend"
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "alembic>=1.14.0,<2",
    "authlib>=1.4.0,<2",
    "fastapi>=0.115.0,<0.116",
    "google-genai>=1.0.0,<2",
    "pillow>=10.0.0,<12",
    "psycopg[binary]>=3.2.0,<4",
    "pydantic-settings>=2.6.0,<3",
    "python-multipart>=0.0.9,<0.1",
    "pyjwt>=2.10.0,<3",
    "rapidfuzz>=3.10.0,<4",
    "requests>=2.32.0,<3",
    "sqlalchemy>=2.0.36,<3",
    "uvicorn[standard]>=0.32.0,<0.33",
    "werkzeug>=3.1.0,<4",
    "openai>=1.0.0,<2",
    "sentry-sdk[fastapi]>=2.20.0,<3",
]

[dependency-groups]
dev = [
    "flask-jwt-extended>=4.6.0,<5",
    "httpx>=0.28.0,<0.29",
    "pytest>=8.3.0,<9",
    "pytest-cov>=6.0.0,<7",
    "ruff>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: tests requiring PostgreSQL (set TEST_DATABASE_URL)",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
fail_under = 50
show_missing = true

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"alembic/versions/*.py" = ["I001", "UP007", "UP035"]
"tests/**/*.py" = ["E501"]
"app/scripts/**/*.py" = ["E501"]
"scripts/**/*.py" = ["E501"]
